<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/applogo"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/helpme"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textAlignment="center" />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/mobileno"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/mobileno"
                            android:inputType=""
                            android:textAlignment="center" />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="144dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/submit"
                    android:textColor="#d3d3d3" />
                <!--android:onClick="submit"-->



            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>

